Add filters and pagination to top rating
